# Squad44StatusBot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/squad44_status/: __main__.py
src/squad44_status/cogs/: __init__.py  status_cog.py
